--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -42,6 +42,14 @@
     "editor.defaultFormatter": "redhat.java",
     "editor.tabSize": 2
   },
+  "[javascript]": {
+    "editor.defaultFormatter": "esbenp.prettier-vscode",
+    "editor.tabSize": 2
+  },
+  "[typescript]": {
+    "editor.defaultFormatter": "esbenp.prettier-vscode",
+    "editor.tabSize": 2
+  },
   "[json]": {
     "editor.defaultFormatter": "esbenp.prettier-vscode",
     "editor.tabSize": 2
