--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -1,29 +1,26 @@
 {
   "extensions": [
     "1yib.rust-bundle",
-    "affenwiesel.matlab-formatter",
     "allmeta.ayu-dark-meta",
     "amin.omodoro",
-    "anysphere.pyright",
     "batisteo.vscode-django",
     "be5invis.toml",
     "bierner.markdown-mermaid",
     "charliermarsh.ruff",
     "davidanson.vscode-markdownlint",
+    "docker.docker",
     "donjayamanne.githistory",
     "donjayamanne.python-environment-manager",
     "donjayamanne.python-extension-pack",
     "dustypomerleau.rust-syntax",
     "eamodio.gitlens",
-    "equinusocio.vsc-community-material-theme",
-    "equinusocio.vsc-material-theme",
-    "equinusocio.vsc-material-theme-icons",
     "esbenp.prettier-vscode",
     "eserozvataf.one-dark-pro-monokai-darker",
     "fill-labs.dependi",
     "github.copilot",
     "github.copilot-chat",
     "github.vscode-github-actions",
+    "goessner.mdmath",
     "golang.go",
     "haskell.haskell",
     "hoovercj.haskell-linter",
@@ -37,13 +34,16 @@
     "mathworks.language-matlab",
     "mechatroner.rainbow-csv",
     "mikestead.dotenv",
-    "ms-azuretools.vscode-docker",
+    "ms-azuretools.vscode-containers",
     "ms-python.autopep8",
     "ms-python.black-formatter",
     "ms-python.debugpy",
     "ms-python.isort",
+    "ms-python.mypy-type-checker",
     "ms-python.python",
     "ms-python.vscode-pylance",
+    "ms-python.vscode-python-envs",
+    "ms-toolsai.datawrangler",
     "ms-toolsai.jupyter",
     "ms-toolsai.jupyter-keymap",
     "ms-toolsai.jupyter-renderers",
@@ -60,7 +60,7 @@
     "ms-vscode.remote-explorer",
     "ms-vsliveshare.vsliveshare",
     "njpwerner.autodocstring",
-    "paulosilva.vsc-octave-debugger",
+    "openai.chatgpt",
     "phoityne.phoityne-vscode",
     "redhat.java",
     "rust-lang.rust-analyzer",
@@ -68,6 +68,7 @@
     "tamasfe.even-better-toml",
     "teabyii.ayu",
     "tecosaur.latex-utilities",
+    "tialki.tex-preview",
     "toasty-technologies.octave",
     "tusindfryd.octave-formatter",
     "twxs.cmake",
