Add Ruby and Scala

--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -64,6 +64,12 @@
     "phoityne.phoityne-vscode",
     "redhat.java",
     "rust-lang.rust-analyzer",
+    "scala-lang.scala",
+    "scala-lang.scala-snippets",
+    "scalameta.metals",
+    "shopify.ruby-extensions-pack",
+    "shopify.ruby-lsp",
+    "sorbet.sorbet-vscode-extension",
     "swashata.beautiful-ui",
     "tamasfe.even-better-toml",
     "teabyii.ayu",
@@ -72,8 +78,6 @@
     "toasty-technologies.octave",
     "tusindfryd.octave-formatter",
     "twxs.cmake",
-    "visualstudioexptteam.intellicode-api-usage-examples",
-    "visualstudioexptteam.vscodeintellicode",
     "vscjava.vscode-gradle",
     "vscjava.vscode-java-debug",
     "vscjava.vscode-java-dependency",
