--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -13,7 +13,7 @@
   "files.autoSave": "afterDelay",
   "files.insertFinalNewline": true,
   "github.copilot.enable": {
-    "python": true,
+    "*": true,
     "dotenv": false,
     "ini": false,
     "json": false,
@@ -21,7 +21,6 @@
     "markdown": false,
     "plaintext": false,
     "scminput": false,
-    "toml": true,
     "yaml": false,
     "xml": false
   },
@@ -80,9 +79,21 @@
     "editor.indentSize": 4,
     "editor.insertSpaces": true
   },
+  "python.analysis.typeCheckingMode": "standard",
   "python.testing.unittestEnabled": false,
   "python.testing.pytestEnabled": true,
   "python.testing.pytestArgs": ["."],
+  "[ruby]": {
+    "editor.defaultFormatter": "Shopify.ruby-lsp",
+    "editor.tabSize": 2,
+    "editor.insertSpaces": true,
+    "editor.semanticHighlighting.enabled": true
+  },
+  "rust-analyzer.workspace.discoverConfig": null,
+  "[scala]": {
+    "editor.defaultFormatter": "scalameta.metals",
+    "editor.tabSize": 2
+  },
   "[shellscript]": {
     "editor.tabSize": 2
   },
@@ -92,6 +103,5 @@
   "[yaml]": {
     "editor.defaultFormatter": "esbenp.prettier-vscode",
     "editor.tabSize": 2
-  },
-  "rust-analyzer.workspace.discoverConfig": null
+  }
 }
